--- a/data/applications.yml
+++ b/data/applications.yml
@@ -403,7 +403,7 @@
   sentry_url: false
   dashboard_url: false
 - github_repo_name: govuk-content-schemas
-  app_name: govuk-content-store-examples
+  app_name: govuk-content-schemas
   management_url: https://dashboard.heroku.com/apps/govuk-content-store-examples
   production_hosted_on: heroku
   type: Utilities
